--- a/src/app.html
+++ b/src/app.html
@@ -1,15 +1,13 @@
 <!doctype html>
 <html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		%sveltekit.head%
+	</head>
 
-<head>
-	<meta charset="utf-8" />
-	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	%sveltekit.head%
-</head>
-
-<body data-sveltekit-preload-data="hover" class="bg-lime-50 overscroll-none">
-	<div class="min-h-screen flex flex-col relative">%sveltekit.body%</div>
-</body>
-
+	<body data-sveltekit-preload-data="hover" class="overscroll-none bg-lime-50">
+		<div class="relative flex min-h-screen flex-col">%sveltekit.body%</div>
+	</body>
 </html>
